--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-stylus": "^0.22.0",
+    "grunt-contrib-uglify": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "^1.4.1",
     "grunt-parallel": "^0.4.1",
