--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-stylus": "^0.22.0",
     "grunt-contrib-uglify": "^0.10.1",
